syntax = "proto3";

package com.bank;

//option java_multiple_files = true;

message CardsDto {
  string mobile_number = 1;

  string card_number = 2;

  string card_type = 3;

  int32 total_limit = 4;

  int32 amount_used = 5;

  int32 available_amount = 6;
}

message LoanDto {
  string mobile_number = 1;

  string loan_number = 2;

  string loan_type = 3;

  int32 total_loan = 4;

  int32 amount_paid = 5;

  int32 outstanding_amount = 6;
}

message StringValue {
  string value = 1;
}

service CardsService {

  rpc fetchCardDetailsProto(StringValue) returns(CardsDto);
}

service LoansService {

  rpc fetchLoanDetailsProto(StringValue) returns(LoanDto);
}